Fix icon spacing

--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@
 		}
 
 		#header nav {
-			margin: 1.5em 0 0 0;
+			margin: 0 0 0 0;
 		}
 
 			#header nav li {
@@ -304,8 +304,8 @@
 				line-height: 5.885em;
 				opacity: 0;
 				position: relative;
-				top: 0;
-				width: 5.35em;
+				top: 0.8em;
+				width: 4.5em;
 			}
 			#header nav li.x1 {
 				    color: #fff;
